# infer-rs-v0

./: Cargo.toml  README.md  build.rs
model_artifacts/: golden_input.npy  golden_logits.npy  mnist_cnn.onnx  mnist_cnn.onnx.data
proto/inference/v1/: service.proto
src/: main.rs
tests/: verify_model.rs
