[package]
name = "backend_inference"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ndarray = "0.17.2"
ort = "2.0.0-rc.11"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
